@@ -1269,13 +1269,7 @@ $\rowopadd{-7}{2}{3}$, we can see that the third equation reads $0=-5$, a false 
 (<acroref type="example" acro="SAB" />, <acroref type="example" acro="SAA" />, <acroref type="example" acro="SAE" />)
 illustrate the full range of possibilities for a system of linear equations <mdash /> no solutions, one solution, or infinitely many solutions.  In the next section we'll examine these three scenarios more closely.</p>
 
-<definition acro="RR" index="row-reduce!the verb">
-<title>Row-Reducing</title>
-<p>To <define>row-reduce</define> the matrix $A$ means to apply row operations to $A$ and arrive at a row-equivalent matrix $B$ in reduced row-echelon form.</p>
-
-</definition>
-
-<p>So the term <define>row-reduce</define> is used as a verb.   <acroref type="theorem" acro="REMEF" /> tells us that this process will always be successful and <acroref type="theorem" acro="RREFU" /> tells us that the result will be unambiguous.  Typically, the analysis of $A$ will proceed by analyzing $B$ and applying theorems whose hypotheses include the row-equivalence of $A$ and $B$.</p>
+<p>We (and everybody else) will often speak of <q>row-reducing</q> a matrix.  This is an informal way of saying we want to begin with a matrix $A$ and then analyze <em>the</em> matrix $B$ that is row-equivalent to $A$ and in reduced row-echelon form.  So the term <define>row-reduce</define> is used as a verb, but describes something a bit more complicated, since we do not really change $A$.   <acroref type="theorem" acro="REMEF" /> tells us that this process will always be successful and <acroref type="theorem" acro="RREFU" /> tells us that $B$ will be unambiguous.  Typically, an investigation of $A$ will proceed by analyzing $B$ and applying theorems whose hypotheses include the row-equivalence of $A$ and $B$, and usually the hypothesis that $B$ is in reduced row-echelon form.</p>
 
 <sageadvice acro="RREF" index="reduced row-echelon form">
 <title>Reduced Row-Echelon Form</title>
