@@ -3,6 +3,7 @@ v3.00 2012/xx/xx
 New:  Diagrams NSLT, SLT (surjective linear transformations)
 New:  Diagrams KPI, IVLT (pre-images, invertible linear transformations)
 New:  Diagram KRI (kernel and range isomorphisms)
+Change:  Replaced Definition RR by an informal discussion
 Typo:  Proof of Theorem SLSLC: Doubled text macro in source (Glenna Toomey)
 Typo:  Solution S.T30: Corrected bolding on 'Proof' (Glenna Toomey)
 
